-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.0.0
On opening a CMakeList.txt file for the first time, cmake runs fine, but then on building it is getting stuck at "Persisting CMake state". If opening a project where the Project.user file already exists there is no issue.
Quickly looking at the source code, there appears to be a race condition in CMakeBuildStep::run(). Run calls BuildDirManager::persistCMakeState() and if true, waits for BuildDirManager to emit dataAvailable, however persistCMakeState can emit dataAvailable before returning.
- is duplicated by
-
QTCREATORBUG-16244 build hangs at "Persisting CMake state..."
-
- Closed
-