CMake: Fix race between persisting cmake configuration and parsing

First make sure the configuration is reset: This makes sure the correct
branch is taken in parse().

Then trigger parsing through the event loop so that its signals will
definitely arrive after persistCMakeState has returned.

Task-number: QTCREATORBUG-16258
Change-Id: I103ca6b6119ec70c99828d883d728a8bb97fd6bf
Reviewed-by: Tim Jenssen <tim.jenssen@theqtcompany.com>